@@ -14,18 +14,16 @@
 #   along with this program; if not, write to the Free Software
 #   Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 
-
 from gimpfu import *
 
+gettext.install("gimp20-python", gimp.locale_directory, unicode=1)
 
-def palette_offset(palette, amount, forward):
+def palette_offset(palette, amount):
     #If palette is read only, work on a copy:
     editable = pdb.gimp_palette_is_editable(palette) 
     if not editable:palette = pdb.gimp_palette_duplicate (palette)     
 
     num_colors = pdb.gimp_palette_get_info (palette)
-    if not forward:
-        amount = num_colors - amount
 
     tmp_entry_array = []
     for i in xrange (num_colors):
@@ -44,20 +42,21 @@ def palette_offset(palette, amount, forward):
 
 register(
     "python-fu-palette-offset",
-    "Offsets a given palette",
-    "palette_offset (palette, amount_to_offset) -> modified_palette",
+    N_("Offset a color palette"),
+    "palette_offset (palette, amount) -> modified_palette",
     "Joao S. O. Bueno Calligaris, Carol Spears",
     "(c) Joao S. O. Bueno Calligaris",
     "2004, 2006",
-    "_Offset Palette...",
+    N_("_Offset Palette..."),
     "",
     [
-     (PF_PALETTE, "palette", "Name of palette to offset", ""),
-     (PF_INT,     "amount",  "Amount of colors to offset", 1),
-     (PF_BOOL,    "forward", "Offset the palette forward?", True)
+     (PF_PALETTE, "palette", _("Palette"), ""),
+     (PF_INT,     "amount",  _("Offset"),  1),
     ],
-    [(PF_PALETTE, "new-palette", "Name of offset palette.")],
-    palette_offset, menu="<Palettes>")
-
+    [(PF_PALETTE, "new-palette", "Result")],
+    palette_offset,
+    menu="<Palettes>",
+    domain=("gimp20-python", gimp.locale_directory)
+    )
 
 main ()
