@@ -1,10 +1,16 @@
 2006-09-21  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/pygimp/plug-ins/palette-offset.py
+	* plug-ins/pygimp/plug-ins/palette-sort.py: prepared for translation.
+
+2006-09-21  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/pygimp/gimpui.override (_wrap_gimp_dialog_new)
 	* plug-ins/pygimp/pygimp-drawable.c (drw_set_name): allow String
 	or Unicode objects.
 
-	* plug-ins/pygimp/plug-ins/colorxhtml.py: prepared for translation.
+	* plug-ins/pygimp/plug-ins/colorxhtml.py
+	* plug-ins/pygimp/plug-ins/foggify.py: prepared for translation.
 
 2006-09-21  Sven Neumann  <sven@gimp.org>
 
